--- a/MongoSample.UI/Pages/_ViewImports.cshtml
+++ b/MongoSample.UI/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using MongoSample
-@namespace MongoSample.Pages
+@namespace MongoSample.UI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
